# argos

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  SECURITY.md  desigin.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  run.py  run_tui.py
agent-team/: README.md  tmux-usage.md
agent-team/.hermes/plans/: 2026-04-21_203547-ai-multi-agent-console-m1-plan.md  2026-04-21_205011-ai-multi-agent-console-wireframes-doc.md  2026-04-21_210311-ai-multi-agent-console-m1-acceptance-doc.md
agent-team/engineering/docs/: ai-multi-agent-console-m1-startup.md  openapi-draft.yaml  ws-events-draft.md
agent-team/engineering/notes/: 2026-04-21_202752-ai-multi-agent-console-plan.md
agent-team/engineering/tasks/: ai-multi-agent-console-m1-dev-tasks.md
agent-team/product/docs/: ai-multi-agent-console-m1-acceptance-checklist.md  ai-multi-agent-console-wireframes-v1.md
agent-team/qa/test-plans/: ai-multi-agent-console-m1-smoke-checklist.md  ai-multi-agent-web-console-mvp-test-plan-v1.md
agent-team/scripts/: ask-agent.sh  collect-team-output.sh  dispatch-and-wait.sh  read-agent-output.sh  reset-team-workspace.sh  send-agent-command.sh  send-to-agent.sh  start-team.sh  wait-all-agents.sh
agent-team/shared/context/: current-priorities.md  operating-rules.md
agent-team/shared/decisions/: 2026-04-21-ai-multi-agent-console-stage-gate.md  decision-log.md
agent-team/shared/reports/: 2026-04-21-ai-multi-agent-console-master-plan.md  2026-04-21-frontend-mvp-dev-task.md  2026-04-21-frontend-mvp-prep-status.md  2026-04-21-frontend-skeleton-batch1-ceo-review.md  daily-template.md
app/: __init__.py  asgi.py  cli.py  config.py  logging_config.py  mcp_server.py  routes.py  services.py
app/controllers/: __init__.py  agent_mcps.py  agents.py  kanban.py  messages.py  model_configs.py  web.py
app/db/: __init__.py  migrations.py  models.py  repositories.py  session.py
app/db/migrations/: __init__.py  alembic.ini  env.py
app/db/migrations/versions/: 2026_05_24_2ce2d98a3fc5_initial_schema.py
app/learning/: __init__.py  active.py  embeddings.py  feedback.py  memory.py  traces.py
app/middleware/: __init__.py  auth.py  errors.py
app/models/: store.py
app/models/store/: __init__.py  agents.py  base.py  delegations.py  events.py  kanban.py  messages.py  user_tasks.py
app/services/: acp.py  agents.py  autostart.py  chat.py  kanban.py  kanban_dispatch.py  kanban_sync.py  mcp_installer.py  messages.py  model_configs.py  profiles.py  registry.py  secrets.py  skill_installer.py  soul.py  team_initialization.py  transfer.py
app/services/acp/: __init__.py  helpers.py  pool.py  session.py
app/static/: app.js  styles.css
app/static/css/: base.css  business-light.css  drawers.css  modals.css  terminal.css
app/templates/: index.html
argos/: __init__.py  asgi.py  cli.py  config.py  logging_config.py  mcp_server.py
argos/controllers/: agents.py  events.py  kanban.py  learning.py  transfer.py
argos/db/migrations/: env.py
argos/db/migrations/versions/: 2026_05_24_2ce2d98a3fc5_initial_schema.py
argos/learning/: __init__.py  config.py  metrics.py
argos/middleware/: auth.py  cors.py  errors.py  ratelimit.py
argos/models/store/: __init__.py  base.py  learning.py
argos/services/: agent_status.py  agents.py  human_input.py  kanban_dispatch.py  kanban_sync.py  kanban_workspace.py  mcp_installer.py  messages.py  model_configs.py  profiles.py  registry.py  settings.py  skill_frontmatter.py  soul.py  team_initialization.py  transfer.py
argos/services/acp/: __init__.py  helpers.py
argos/static/: app.js
argos/static/css/: business-light.css  terminal.css
argos/templates/: index.html
argos/tui/: app.py
doc/: ARCHITECTURE.md  agent-skill-recommendations.md  design.md  import-export.md  kanban-integration-plan.md  kanban.md  long-running-task-mvp-plan.md  mcp-management.md  model-config.md  self-evolving-system-design.md  skills-management.md
scripts/: install.ps1  install.sh
tests/: conftest.py  test_acp_ready_detection.py  test_agent_soul_api.py  test_autostart.py  test_bulk_runtime.py  test_db_migrations.py  test_hermes_status_api.py  test_human_input_api.py  test_kanban_dispatch.py  test_kanban_service.py  test_kanban_settings.py  test_kanban_sync.py  test_learning_smoke.py  test_mcp_installer.py  test_mcp_kanban_tasks.py  test_messages_kanban.py  test_middleware.py  test_model_config_api.py  test_runtime_store_persistence.py  test_skill_api.py  test_skill_frontmatter.py  test_static_hitl_ui.py  test_team_initialization.py  test_transfer.py
